force-app/main/default/objects/RD_GeneralMaterialsList__c/fields/HolderPartCode__c.field-meta.xml
<CustomField>
    <fullName>HolderPartCode__c</fullName>
    <label>HolderPartCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>