force-app/main/default/objects/RD_GeneralMaterialsList__c/fields/OldAbvMatlDesc__c.field-meta.xml
<CustomField>
    <fullName>OldAbvMatlDesc__c</fullName>
    <label>OldAbvMatlDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>