force-app/main/default/objects/RD_GeneralMaterialsList__c/fields/SealUpperTemp__c.field-meta.xml
<CustomField>
    <fullName>SealUpperTemp__c</fullName>
    <label>SealUpperTemp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>