force-app/main/default/objects/RD_GeneralMaterialsList__c/fields/TagMatlDesc__c.field-meta.xml
<CustomField>
    <fullName>TagMatlDesc__c</fullName>
    <label>TagMatlDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>