force-app/main/default/objects/RD_GeneralMaterialsList__c/fields/UpperTemp__c.field-meta.xml
<CustomField>
    <fullName>UpperTemp__c</fullName>
    <label>UpperTemp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>