force-app/main/default/objects/RD_GeneralMaterialsList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MatlCode__c</columns>
    <columns>Matl__c</columns>
    <columns>SealUpperTemp__c</columns>
    <columns>UpperTemp__c</columns>
    <columns>Density__c</columns>
    <columns>OBSOLETE__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>